<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/seymour_one"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLayoutEmailSignIn"
        android:layout_marginBottom="6dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/maven_pro"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLayoutPasswordSignIn"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPasswordSignIn"
            android:hint="@string/password"
            android:fontFamily="@font/maven_pro"
            android:inputType="textPassword"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/btnSign_in"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:fontFamily="@font/maven_pro"
        android:textAllCaps="false"/>


</LinearLayout>